--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     height: 100%;
     background-size: 50%;
     text-align: center;
-    background-image: url(./images/slotmachine.jpeg);
+    /* background-image: url(./images/slotmachine.jpeg); */
 }
 
 h1 {
@@ -16,9 +16,9 @@ h2 {
     width: 10%;
     height: 30px;
     float: left;
-    margin-left: 12%;
+    margin-left: 5%;
     font-family: "Arial Rounded MT Bold";
-    font-size: 20px;
+    font-size: 17px;
     background-color: rgba(244, 244, 226, 0.5);
     padding: 2px;
     text-align: center;
